...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_inputs_form"
            android:layout_marginTop="@dimen/margin_inputs_form">

            <EditText
                android:id="@+id/input_data_nascimento"
                android:drawableRight="@drawable/ic_data_calendario"
                android:drawableEnd="@drawable/ic_data_calendario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="@string/campo_data_nascimento"
...
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/campo_confirmacao_dados"
            android:id="@+id/btnConfimarDados" />
    </LinearLayout>

</ScrollView>

