...
    <string name="msg_completar_cadastro">Complete %1$s com os demais dados</string>

    <string name="msg_cadastro_salvo">Cadastro realizado com sucesso</string>
    <string name="msg_cadastre_proprietario">Cadastre um proprietário</string>
    <string name="msg_cadastre_propriedade">Cadastre uma propriedade</string>
    <string name="msg_spinner_proprietario">Selecione um proprietário</string>
    <string name="msg_spinner_propriedade">Procure uma propriedade</string>

    <string name="msg_excluir_propriedade_sucesso">Propriedade removida com sucesso </string>
    <string name="msg_excluir_proprietario_sucesso">Proprietário removido com sucesso </string>
    <string name="msg_excluir_composto_sucesso">Composto removido com sucesso </string>
    <string name="msg_excluir_dieta_sucesso">Dieta removida com sucesso </string>
    <string name="msg_excluir_animal_sucesso">Animal removido com sucesso </string>
...
